--- a/root/js/highlight/styles/ascetic.css
+++ b/root/js/highlight/styles/ascetic.css
@@ -7,6 +7,7 @@ Original style from softwaremaniacs.org (c) Ivan Sagalaev <Maniac@SoftwareManiac
 pre code {
   display: block; padding: 0.5em;
   background: white; color: black;
+  overflow: auto;
 }
 
 pre .string,
