--- a/root/js/highlight/styles/brown_paper.css
+++ b/root/js/highlight/styles/brown_paper.css
@@ -7,6 +7,7 @@ Brown Paper style from goldblog.com.ua (c) Zaripov Yura <yur4ik7@ukr.net>
 pre code {
   display: block; padding: 0.5em;
   background:#b7a68e url(./brown_papersq.png);
+  overflow: auto;
 }
 
 pre .keyword,
