--- a/root/js/highlight/styles/dark.css
+++ b/root/js/highlight/styles/dark.css
@@ -7,6 +7,7 @@ Dark style from softwaremaniacs.org (c) Ivan Sagalaev <Maniac@SoftwareManiacs.Or
 pre code {
   display: block; padding: 0.5em;
   background: #444;
+  overflow: auto;
 }
 
 pre .keyword,
