--- a/root/js/highlight/styles/googlecode.css
+++ b/root/js/highlight/styles/googlecode.css
@@ -7,6 +7,7 @@ Google Code style (c) Aahan Krish <geekpanth3r@gmail.com>
 pre code {
   display: block; padding: 0.5em;
   background: white; color: black;
+  overflow: auto;
 }
 
 pre .comment,
