--- a/root/js/highlight/styles/magula.css
+++ b/root/js/highlight/styles/magula.css
@@ -10,6 +10,7 @@ Music: Aphex Twin / Xtal
 pre code {
   display: block; padding: 0.5em;
   background-color: #f4f4f4;
+  overflow: auto;
 }
 
 pre code,
