--- a/root/js/highlight/styles/pojoaque.css
+++ b/root/js/highlight/styles/pojoaque.css
@@ -10,6 +10,7 @@ pre code {
   display: block; padding: 0.5em;
   color: #DCCF8F;
   background: url(./pojoaque.jpg) repeat scroll left top #181914;
+  overflow: auto;
 }
 
 pre .comment,
