--- a/root/js/highlight/styles/solarized_dark.css
+++ b/root/js/highlight/styles/solarized_dark.css
@@ -7,6 +7,7 @@ Orginal Style from ethanschoonover.com/solarized (c) Jeremy Hull <sourdrums@gmai
 pre code {
   display: block; padding: 0.5em;
   background: #002b36; color: #839496;
+  overflow: auto;
 }
 
 pre .comment,
