--- a/root/js/highlight/styles/sunburst.css
+++ b/root/js/highlight/styles/sunburst.css
@@ -7,6 +7,7 @@ Sunburst-like style (c) Vasily Polovnyov <vast@whiteants.net>
 pre code {
   display: block; padding: 0.5em;
   background: #000; color: #f8f8f8;
+  overflow: auto;
 }
 
 pre .comment,
