--- a/root/js/highlight/styles/xcode.css
+++ b/root/js/highlight/styles/xcode.css
@@ -7,6 +7,7 @@ XCode style (c) Angel Garcia <angelgarcia.mail@gmail.com>
 pre code {
   display: block; padding: 0.5em;
   background: #fff; color: black;
+  overflow: auto;
 }
 
 pre .comment,
