--- a/root/js/highlight/styles/github.css
+++ b/root/js/highlight/styles/github.css
@@ -11,6 +11,17 @@ pre code {
   overflow: auto;
 }
 
+pre.inlineHS {
+ display:inline-block
+}
+code.inlineHS {
+ display:inline-block
+	padding-left:4px;
+	padding-right:4px;
+	padding-top:1px;
+	padding-bottom:1px;
+}
+
 pre .comment,
 pre .template_comment,
 pre .diff .header,
