--- a/root/js/highlight/styles/github.css
+++ b/root/js/highlight/styles/github.css
@@ -16,10 +16,10 @@ pre code {
 }
 
 pre.inlineHS {
- display:inline-block
+ display:inline-block;
 }
 code.inlineHS {
- display:inline-block
+ display:inline-block;
 	padding-left:4px;
 	padding-right:4px;
 	padding-top:1px;
