css fixed and bbcode updated

--- a/root/js/highlight/styles/github.css
+++ b/root/js/highlight/styles/github.css
@@ -15,11 +15,11 @@ pre code {
   border-color: #D3D3D3;
 }
 
-pre.inlineHS {
+pre.inlinephs {
  display:inline-block;
 }
-code.inlineHS {
- display:inline-block;
+code.inlinechs {
+ display:inline;
 	padding-left:4px;
 	padding-right:4px;
 	padding-top:1px;
