--- a/root/js/highlight/styles/ascetic.css
+++ b/root/js/highlight/styles/ascetic.css
@@ -10,6 +10,17 @@ pre code {
   overflow: auto;
 }
 
+pre.inlinephs {
+ display:inline-block;
+}
+code.inlinechs {
+ display:inline;
+    padding-left:4px;
+    padding-right:4px;
+    padding-top:1px;
+    padding-bottom:1px;
+}
+
 pre .string,
 pre .tag .value,
 pre .filter .argument,
