--- a/root/js/highlight/styles/idea.css
+++ b/root/js/highlight/styles/idea.css
@@ -11,6 +11,17 @@ pre code {
   overflow: auto;
 }
 
+pre.inlinephs {
+ display:inline-block;
+}
+code.inlinechs {
+ display:inline;
+    padding-left:4px;
+    padding-right:4px;
+    padding-top:1px;
+    padding-bottom:1px;
+}
+
 pre .subst,
 pre .title {
   font-weight: normal;
