--- a/root/js/highlight/styles/ir_black.css
+++ b/root/js/highlight/styles/ir_black.css
@@ -8,6 +8,17 @@ pre code {
   overflow: auto;
 }
 
+pre.inlinephs {
+ display:inline-block;
+}
+code.inlinechs {
+ display:inline;
+    padding-left:4px;
+    padding-right:4px;
+    padding-top:1px;
+    padding-bottom:1px;
+}
+
 pre .shebang,
 pre .comment,
 pre .template_comment,
