--- a/root/js/highlight/styles/rainbow.css
+++ b/root/js/highlight/styles/rainbow.css
@@ -13,6 +13,16 @@ pre code {
   overflow: auto;
 }
 
+pre.inlinephs {
+ display:inline-block;
+}
+code.inlinechs {
+ display:inline;
+    padding-left:4px;
+    padding-right:4px;
+    padding-top:1px;
+    padding-bottom:1px;
+}
 
 pre .body,
 pre .collection {
