--- a/root/js/highlight/styles/school_book.css
+++ b/root/js/highlight/styles/school_book.css
@@ -11,6 +11,17 @@ pre code {
   overflow: auto;
 }
 
+pre.inlinephs {
+ display:inline-block;
+}
+code.inlinechs {
+ display:inline;
+    padding-left:4px;
+    padding-right:4px;
+    padding-top:1px;
+    padding-bottom:1px;
+}
+
 pre{
   background:#f6f6ae url(./school_book.png);
   border-top: solid 2px #d2e8b9;
