--- a/root/js/highlight/styles/zenburn.css
+++ b/root/js/highlight/styles/zenburn.css
@@ -12,6 +12,17 @@ pre code {
   overflow: auto;
 }
 
+pre.inlinephs {
+ display:inline-block;
+}
+code.inlinechs {
+ display:inline;
+    padding-left:4px;
+    padding-right:4px;
+    padding-top:1px;
+    padding-bottom:1px;
+}
+
 pre .keyword,
 pre .tag,
 pre .css .class,
